# wallet-gen

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  README.md
misc/: coin_enum.py  coin_versions.py  header.txt
src/: bitcoin.rs  coin.rs  cryptonote.rs  error.rs  ethereum.rs  feathercoin.rs  hex_slice.rs  lib.rs  prelude.rs  utils.rs  wallet.rs
src/ed25519/: crypto.rs  keys.rs  mod.rs
src/utils/: hex_slice.rs  mod.rs  sha512.rs
