[package]
name = "wallet-gen"
version = "0.3.3"

description = "Rust library to mass-generate wallets for many different cryptocurrencies"
repository = "https://gitlab.com/standard-mining/wallet-gen"
readme = "./README.md"
license = "MIT"
authors = ["Standard Mining", "Ammon Smith <ammon.i.smith@gmail.com>"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
arrayvec = "0.4"
base58 = "0.1"
digest = "0.7"
either = "1"
lazy_static = "1"
openssl = "0.10"
serde = { version = "1", optional = true, features = ["derive"] }
tiny-keccak = "1"
